# LiMe

./: .gitignore  BUILD.md  DEVELOPMENT.md  LICENSE  PKGBUILD  QUICKSTART.md  README.md  VERSION  arch-installer.py  build-iso.sh  build-packages.sh  build.py  build.yml  cinnamon-global.h  installer.py  installer_ui.py  lime-app-store.c  lime-bluetooth-manager.h  lime-compositor.h  lime-core.h  lime-effects-engine.h  lime-file-manager.c  lime-input-settings.h  lime-launcher.c  lime-multimedia-manager.h  lime-network-manager.c  lime-notifications.c  lime-notifications.h  lime-power-manager.c  lime-screensaver.h  lime-session-manager.c  lime-settings.c  lime-settings.h  lime-software-updater.h  lime-system-monitor.c  lime-system-monitor.h  lime-system-settings.h  lime-theme-manager-full.c  lime-theme-manager.c  lime-theme-manager.h  (+12 more)
archiso/: profiledef.sh
archiso/syslinux/: syslinux.cfg
assets/backgrounds/: README.md
build-tools/packager/: README.md
datasets/: README.md
include/lime-de/: lime-ai-integration.h  lime-app-store.h  lime-display-settings.h  lime-file-manager.h  lime-launcher.h  lime-network-manager.h  lime-panel.h  lime-session-manager.h  lime-utils.h  lime-window.h  shell-util.h
install/: BUILD_AND_INSTALL_INSTRUCTIONS.md  README.md
lime-installer/scripts/: README.md
lime-installer/ui/: README.md
lime_tools/: __init__.py  ai_workbench.py  api_v1.py  arch_installer.py  build.py  project_organizer.py  upstream_sync.py
packager/: README.md
scripts/: build-iso.sh  build-packages.sh  post-install.sh  setup-dev.sh
src/de/: lime-ai-integration-full.c  lime-ai-integration.c  lime-bluetooth-manager.c  lime-compositor.c  lime-core.c  lime-display-settings.c  lime-effects-engine.c  lime-input-settings.c  lime-multimedia-manager.c  lime-panel.c  lime-screensaver.c  lime-software-updater.c  lime-system-settings.c  lime-window.c  shell-util.c
ui/: README.md
