[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "lime-installer"
version = "0.1.0"
description = "LiMe OS Graphical Installer with Automated Installation"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "GPL-2.0"}
authors = [
    {name = "LiMe OS Team", email = "dev@lime-os.local"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: X11 Applications :: Qt",
    "License :: OSI Approved :: GNU General Public License v2 (GPLv2)",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "PyQt5>=5.15.0",
    "requests>=2.28.0",
    "psutil>=5.8.0",
    "pyyaml>=5.4.0",
]

[project.scripts]
lime-installer = "installer:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
